--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -224,7 +224,7 @@ img {
 
     .show-1-grid {
         display: grid;
-        grid-template-columns: 350px 1fr;
+        grid-template-columns: 400px 1fr;
         grid-gap: 1rem;
         height: 80%;
         
@@ -255,6 +255,7 @@ img {
             p {
                 padding: 0 2rem;
                 margin-top: 1rem;
+                font-size: 1.2rem;
             }
             
             .btn-container{
@@ -265,6 +266,7 @@ img {
 
                 .btn {
                     text-align: center;
+                    font-size: 1rem;
                 }
             }
         }
@@ -272,11 +274,11 @@ img {
         &__image {
             display: flex;
             align-items: center;
+            max-height: 650px;
 
             img {
+                max-height: 650px;
                 object-fit: contain;
-                border-radius: 10px;
-                box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.2);
             }
         }
     }
